changed style order in CSS doc, modified classes in html to not be named after css properties, fixed an img bleeding over other sections, added comments to each change in documents

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,3 +1,5 @@
+/* Universal selector */
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -10,8 +12,6 @@ body {
 }
 
 .header {
-    position: sticky;
-    top: 5px;
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -27,7 +27,9 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+/* Changed header div to nav */
+
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -35,11 +37,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -49,33 +51,68 @@ a {
     text-decoration: none;
 }
 
-p {
+/* Changed the p to section */
+
+section {
     font-size: 16px;
 }
 
+/* I took out the background image and put it in the html doc so I could add alt text to it. */
+
 .hero {
-    height: 800px;
+    /* changed height to 100% so it wouldn't bleed over the content below it, and to match the mockup */
+    height: 100%;
     width: 100%;
-    z-index: -2;
-    position: relative;
     margin-bottom: 25px;
-}
-
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
+    
 }
 
 .content {
+    margin-top: 5px;
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
+
+/* Changed the classes on the content images so they weren't named after CSS properties */
+
+.first-and-third-img {
+    float: left;
+    margin-right: 25px;
+}
+
+.second-img {
+   float: right;
+    margin-left: 25px;
+}
+
+
+/* consolidated repeated CSS blocks, and made one class for each section to share and added it in the html */
+
+/* Moved the content section styles above the benefits sections to better match the flow of the html doc */
+
+.content-sections {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/* consolidated repeated CSS blocks*/
+
+.content-sections img {
+    max-height: 200px;
+}
+
+/* consolidated repeated CSS blocks */
+
+.content h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
 
 .benefits {
     margin-right: 20px;
@@ -88,106 +125,25 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
+/* consolidated repeated CSS blocks */
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefits h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
+/* consolidated repeated CSS blocks */
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 .footer {
@@ -196,3 +152,5 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
+
+/* There was a CSS block making the font bigger in the footer, and it had the wrong heading element, so I deleted it. */
